// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rates Page Test > matches snapshot after changing from/to currency 1`] = `
<div>
  <div
    class="_container_3590bb"
  >
    <div
      class="_content_3590bb"
    >
      <div
        class="_heading_3590bb"
      >
        Currency Conversion
      </div>
      <div
        class="_rowWrapper_3590bb"
      >
        <div>
          <div
            class="_container_5d938f undefined"
            style="margin-right: 20px;"
          >
            <span>
              From
            </span>
            <button
              class="_dropdown_5d938f"
            >
              <img
                alt="SG"
                class="_flag_3590bb"
                src="/img/flags/SG.svg"
                width="20px"
              />
              <span
                class="_dropdownText_5d938f"
              >
                SGD
              </span>
              <div
                class="_dropdownToggle_5d938f"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.2 5.3894H7.8C6.2536 5.3894 5 6.64301 5 8.1894V16.5894C5 18.1358 6.2536 19.3894 7.8 19.3894H16.2C17.7464 19.3894 19 18.1358 19 16.5894V8.1894C19 6.64301 17.7464 5.3894 16.2 5.3894Z"
                    stroke="#E5E5E5"
                    stroke-width="1.03427"
                  />
                  <path
                    class="_toggleArrow_5d938f "
                    clip-rule="evenodd"
                    d="M9.20711 11.3894C8.76165 11.3894 8.53857 11.928 8.85355 12.243L11.6464 15.0359C11.8417 15.2311 12.1583 15.2311 12.3536 15.0358L15.1464 12.243C15.4614 11.928 15.2383 11.3894 14.7929 11.3894H9.20711Z"
                    fill="#6D7587"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="_exchangeWrapper_3590bb"
        >
          <div
            class="_transferIcon_3590bb"
          >
            <img
              alt="Transfer icon"
              src="/img/icons/Transfer.svg"
            />
          </div>
          <div
            class="_rate_3590bb"
          >
            0.7456
          </div>
        </div>
        <div>
          <div
            class="_container_5d938f undefined"
            style="margin-left: 20px;"
          >
            <span>
              To
            </span>
            <button
              class="_dropdown_5d938f"
            >
              <img
                alt="IN"
                class="_flag_3590bb"
                src="/img/flags/IN.svg"
                width="20px"
              />
              <span
                class="_dropdownText_5d938f"
              >
                INR
              </span>
              <div
                class="_dropdownToggle_5d938f"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.2 5.3894H7.8C6.2536 5.3894 5 6.64301 5 8.1894V16.5894C5 18.1358 6.2536 19.3894 7.8 19.3894H16.2C17.7464 19.3894 19 18.1358 19 16.5894V8.1894C19 6.64301 17.7464 5.3894 16.2 5.3894Z"
                    stroke="#E5E5E5"
                    stroke-width="1.03427"
                  />
                  <path
                    class="_toggleArrow_5d938f "
                    clip-rule="evenodd"
                    d="M9.20711 11.3894C8.76165 11.3894 8.53857 11.928 8.85355 12.243L11.6464 15.0359C11.8417 15.2311 12.1583 15.2311 12.3536 15.0358L15.1464 12.243C15.4614 11.928 15.2383 11.3894 14.7929 11.3894H9.20711Z"
                    fill="#6D7587"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="_rowWrapper_3590bb"
      >
        <div
          style="margin-bottom: 1rem; margin-top: 2rem;"
        >
          <label
            for="transfer-amount"
          >
            Transfer amount
          </label>
          <br />
          <input
            id="transfer-amount"
            inputmode="numeric"
            pattern="-?\\d*"
            placeholder="e.g. 100"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="_base_a40bf7"
        style="margin-top: 20px;"
      >
        <div
          class="_progress_a40bf7 _slow_3590bb"
          style="transform: translate(-0px);"
        />
      </div>
      <div
        class="_loaderWrapper_3590bb"
      >
        <div
          class="_loader_20fc81"
          style="width: 25px; height: 25px;"
        >
          <svg
            fill="none"
            viewBox="0 0 19 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              class="loader-circle"
              cx="9.5"
              cy="9.5"
              r="7.5"
              stroke="#8e96aa"
              stroke-opacity="0.5"
              stroke-width="2.5"
            />
            <path
              class="loader-focus"
              d="M9.5 17C5.35786 17 2 13.6421 2 9.5"
              stroke="#457ced"
              stroke-width="2.5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Rates Page Test > matches snapshot with default rendering 1`] = `
<div>
  <div
    class="_container_3590bb"
  >
    <div
      class="_content_3590bb"
    >
      <div
        class="_heading_3590bb"
      >
        Currency Conversion
      </div>
      <div
        class="_rowWrapper_3590bb"
      >
        <div>
          <div
            class="_container_5d938f undefined"
            style="margin-right: 20px;"
          >
            <span>
              From
            </span>
            <button
              class="_dropdown_5d938f"
            >
              <img
                alt="AU"
                class="_flag_3590bb"
                src="/img/flags/AU.svg"
                width="20px"
              />
              <span
                class="_dropdownText_5d938f"
              >
                AUD
              </span>
              <div
                class="_dropdownToggle_5d938f"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.2 5.3894H7.8C6.2536 5.3894 5 6.64301 5 8.1894V16.5894C5 18.1358 6.2536 19.3894 7.8 19.3894H16.2C17.7464 19.3894 19 18.1358 19 16.5894V8.1894C19 6.64301 17.7464 5.3894 16.2 5.3894Z"
                    stroke="#E5E5E5"
                    stroke-width="1.03427"
                  />
                  <path
                    class="_toggleArrow_5d938f "
                    clip-rule="evenodd"
                    d="M9.20711 11.3894C8.76165 11.3894 8.53857 11.928 8.85355 12.243L11.6464 15.0359C11.8417 15.2311 12.1583 15.2311 12.3536 15.0358L15.1464 12.243C15.4614 11.928 15.2383 11.3894 14.7929 11.3894H9.20711Z"
                    fill="#6D7587"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          class="_exchangeWrapper_3590bb"
        >
          <div
            class="_transferIcon_3590bb"
          >
            <img
              alt="Transfer icon"
              src="/img/icons/Transfer.svg"
            />
          </div>
          <div
            class="_rate_3590bb"
          >
            0.7456
          </div>
        </div>
        <div>
          <div
            class="_container_5d938f undefined"
            style="margin-left: 20px;"
          >
            <span>
              To
            </span>
            <button
              class="_dropdown_5d938f"
            >
              <img
                alt="US"
                class="_flag_3590bb"
                src="/img/flags/US.svg"
                width="20px"
              />
              <span
                class="_dropdownText_5d938f"
              >
                USD
              </span>
              <div
                class="_dropdownToggle_5d938f"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.2 5.3894H7.8C6.2536 5.3894 5 6.64301 5 8.1894V16.5894C5 18.1358 6.2536 19.3894 7.8 19.3894H16.2C17.7464 19.3894 19 18.1358 19 16.5894V8.1894C19 6.64301 17.7464 5.3894 16.2 5.3894Z"
                    stroke="#E5E5E5"
                    stroke-width="1.03427"
                  />
                  <path
                    class="_toggleArrow_5d938f "
                    clip-rule="evenodd"
                    d="M9.20711 11.3894C8.76165 11.3894 8.53857 11.928 8.85355 12.243L11.6464 15.0359C11.8417 15.2311 12.1583 15.2311 12.3536 15.0358L15.1464 12.243C15.4614 11.928 15.2383 11.3894 14.7929 11.3894H9.20711Z"
                    fill="#6D7587"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="_rowWrapper_3590bb"
      >
        <div
          style="margin-bottom: 1rem; margin-top: 2rem;"
        >
          <label
            for="transfer-amount"
          >
            Transfer amount
          </label>
          <br />
          <input
            id="transfer-amount"
            inputmode="numeric"
            pattern="-?\\d*"
            placeholder="e.g. 100"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="_base_a40bf7"
        style="margin-top: 20px;"
      >
        <div
          class="_progress_a40bf7 _slow_3590bb"
          style="transform: translate(-0px);"
        />
      </div>
      <div
        class="_loaderWrapper_3590bb"
      >
        <div
          class="_loader_20fc81"
          style="width: 25px; height: 25px;"
        >
          <svg
            fill="none"
            viewBox="0 0 19 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              class="loader-circle"
              cx="9.5"
              cy="9.5"
              r="7.5"
              stroke="#8e96aa"
              stroke-opacity="0.5"
              stroke-width="2.5"
            />
            <path
              class="loader-focus"
              d="M9.5 17C5.35786 17 2 13.6421 2 9.5"
              stroke="#457ced"
              stroke-width="2.5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
